[gd_scene load_steps=4 format=3 uid="uid://"]

[ext_resource type="Script" path="res://addons/jscn/ui/ConflictWindow.gd" id="1_rnch5"]
[ext_resource type="Script" path="res://addons/jscn/ui/LocalTree.gd" id="2_3mfop"]
[ext_resource type="Script" path="res://addons/jscn/ui/MergedTree.gd" id="2_8avw3"]

[node name="ConflictWindow" type="Window"]
initial_position = 2
title = "Merging scene"
size = Vector2i(1500, 900)
transient = true
script = ExtResource("1_rnch5")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
text = "Conflicts :"

[node name="ConflictsLabel" type="Label" parent="Control/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8

[node name="HSeparator" type="HSeparator" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Local changes :"

[node name="LocalTree" type="Tree" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
drop_mode_flags = 3
select_mode = 1
script = ExtResource("2_3mfop")

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Merged :"

[node name="MergedTree" type="Tree" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
drop_mode_flags = 3
select_mode = 1
script = ExtResource("2_8avw3")

[node name="VBoxContainer3" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Remote changes :"

[node name="RemoteTree" type="Tree" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
drop_mode_flags = 3
select_mode = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 2

[node name="MergeButton" type="Button" parent="Control/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Merge"

[node name="CancelButton" type="Button" parent="Control/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Cancel"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="button_clicked" from="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MergedTree" to="." method="_on_merged_tree_button_clicked"]
[connection signal="item_activated" from="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MergedTree" to="." method="_on_merged_tree_item_activated"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer3/MergeButton" to="." method="_on_merge_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer3/CancelButton" to="." method="_on_cancel_button_pressed"]
